<resources>
    <string name="app_name">Barchasb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="testing_string">HELLO WORLD TESTING</string>
    <string name="testing">Testing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title_template">تبدیل صوت به متن</string>
    <string name="task_description_template">متن را بر اساس صوتی که میشنوید اصلاح کنید</string>
    <string name="task_ID_template">555</string>
    <string name="username_1">کاربر کاربرزاده</string>
    <string name="username_1_score">100</string>
    <string name="username_2">یوزر یوزریان</string>
    <string name="username_2_score">82</string>
    <string name="username_3">کاربر کاربرنژاد</string>
    <string name="username_3_score">67</string>
    <string name="username_4">یوزر یوزرپور</string>
    <string name="username_4_score">23</string>
    <string name="username_hint">نام کاربری</string>
    <string name="password_hint">رمز عبور</string>
    <string name="login_button_string">ورود</string>
    <string name="dont_have_account_button_string">حساب کاربری ندارید؟ ثبت‌نام کنید</string>
    <string name="languages_title_string">زبان‌ها</string>
    <string name="user_languages_template">فارسی، انگلیسی</string>
    <string name="user_phone_number">09123456789</string>
    <string name="user_age_template">25 سال</string>
    <string name="sign_out_button_string">خروج از حساب کاربری</string>
    <string name="skip_button_string">رد کردن</string>
    <string name="leaderboard_title_string">جدول امتیازات</string>
    <string name="asr_text_template">به گزارش ورزش سه جواد نکونام پس از دیدار شب گذشته استقلال مقابل آلومیمراک در کنفرانس خبری اظهاراتی علیه قضاوت سید رضا مهدوی داور مسابقه انجام داد و صحبت های تندی داشت که پیش بینی می شد با واکنش کمیته انضباطی فدراسیون فوتبال مواجه شود</string>
    <string name="exit_button_string">خروج</string>
    <string name="word_ocr_edittext_hint">کلمه موجود در تصویر</string>
    <string name="target_word_ocr_image_describtion">target word ocr</string>
    <string name="submit_button_text">تایید</string>
    <string name="total_score_title_string">محموع امتیازات</string>
    <string name="repeat_password_hint">تکرار رمز عبور</string>
    <string name="task_tags_template">فوری\n</string>
    <string name="username_1_labels_count">4</string>
    <string-array name="emotion_options">
        <item>عادی</item>
        <item>ناراحت</item>
        <item>خوشحال</item>
        <item>ترس</item>
        <item>عصبانی</item>
    </string-array>
    <string-array name="language_options">
        <item>فارسی</item>
        <item>دیگر زبان‌ها</item>
    </string-array>
    <string-array name="education_options">
        <item>زیر دیپلم</item>
        <item>دیپلم</item>
        <item>لیسانس</item>
        <item>فوق لیسانس</item>
        <item>دکتری</item>
    </string-array>
</resources>